# OpenCADStudio

./: Cargo.toml  INTEGRATION_GAPS.md  README.md  RENDERING_OPTIMIZATION.md  ROADMAP.md
.github/workflows/: release.yml
.kilo/plans/: 1782501843783-test-geom-occt-strategy.md
crates/ocs_plugin_api/: Cargo.toml
crates/ocs_plugin_api/src/: host.rs  manifest.rs  process.rs  runner.rs
crates/ocs_plugin_api/src/ipc/: client.rs  protocol.rs  server.rs
crates/ocs_plugin_api/src/process/: manager.rs
crates/opencad-pythonshell/: Cargo.toml  PLUGIN.md  plugin.toml
crates/opencad-pythonshell/src/: host_proxy.rs  interpreter.rs  lib.rs  ocs_module.rs  ribbon.rs  shell.rs
crates/plugin-template-api2/: plugin.toml
crates/plugin-template-api3/: Cargo.toml  plugin.toml
crates/test_occt_geom/: Cargo.toml  README.md
crates/test_occt_geom/data/boolean/: box_box_common.golden.json  box_box_cut.golden.json  box_box_fuse.golden.json  box_cylinder_cut.golden.json  box_cylinder_fuse.golden.json  cone_cylinder_fuse.golden.json  cylinder_sphere_common.golden.json  sphere_box_fuse.golden.json  torus_box_cut.golden.json
crates/test_occt_geom/data/edge/: box_box_coincident_face.golden.json  box_box_disjoint.golden.json  cylinder_cylinder_tangent.golden.json
crates/test_occt_geom/data/primitive/: box_4x6x8_at_1_2_3.golden.json  cone_r4_h9.golden.json  cylinder_r3_h10.golden.json  sphere_r5.golden.json  torus_r8_r2.golden.json  wedge_4x5x6_at_minus1_minus2_minus3.golden.json
crates/test_occt_geom/src/: cadrum.rs  geom.rs  lib.rs  metrics.rs  reference.rs
crates/test_occt_geom/tests/: booleans.rs  cadrum_adapter.rs  edge_cases.rs  mesh_comparison.rs  primitives.rs
crates/test_step_occt_truck/: Cargo.toml
crates/test_step_occt_truck/data/step_json/: cube_1x2x3.golden.json  hex_prism_r2_h6.golden.json  l_profile_2x3x4.golden.json  wedge_4x5x3.golden.json
crates/test_step_occt_truck/data/surface/: trj4_k1_geo-md-203.golden.json  trj4_k1_geo-pe-203.golden.json  trj4_k1_geo-pe-214.golden.json
crates/test_step_occt_truck/input_brep/: cube_1x2x3.stp  hex_prism_r2_h6.stp  l_profile_2x3x4.stp  wedge_4x5x3.stp
crates/test_step_occt_truck/input_brep_surface/: trj4_k1_geo-md-203.stp
crates/test_step_occt_truck/src/: cadrum.rs  case.rs  lib.rs  mesh_to_solid.rs  metrics.rs  ocs.rs
crates/test_step_occt_truck/tests/: step_goldens.rs  step_mesh_comparison.rs
docs/: plugin-architecture.md
flatpak/: io.github.HakanSeven12.H7CAD.metainfo.xml
packaging/windows/: main.wxs
src/: command.rs
src/app/: cmd_result.rs  command_driver.rs  commands.rs  document.rs  expr_eval.rs  helpers.rs  mod.rs  model_ops.rs  mtext_editor.rs  plugin_host.rs  properties.rs  settings.rs  style_ops.rs  text_inline.rs  update.rs  view.rs  visibility.rs
src/command/: mod.rs
src/entities/: arc.rs  attribute.rs  circle.rs  common.rs  dimension.rs  ellipse.rs  hatch.rs  insert.rs  leader.rs  line.rs  lwpolyline.rs  mesh.rs  mline.rs  mod.rs  mtext.rs  multileader.rs  ole2frame.rs  point.rs  polyline.rs  raster_image.rs  ray.rs  shape.rs  solid.rs  solid3d.rs  spline.rs  table.rs  text.rs  text_support.rs  tolerance.rs  traits.rs  underlay.rs  viewport.rs
src/io/: file_association.rs  mod.rs  obj.rs  pdf_export.rs  print_to_printer.rs  step.rs  stl.rs  xref.rs
src/modules/: mod.rs
src/plugin/: external.rs  marketplace.rs  registry.rs
src/scene/: block_cache.rs  camera_ops.rs  cxf.rs  mod.rs  render.rs  solid3d_tess.rs  tessellate.rs  transform.rs  truck_tess.rs  viewport_pane.rs  (+1 more)
tests/: plugin_lifecycle.rs  pythonshell.rs  text_font_rendering.rs
(+165 files in other folders)
