[package]
name = "opencad-pythonshell"
version = "0.1.0"
edition = "2021"
description = "Python shell plugin for OpenCADStudio (API V3)."
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib"]

[dependencies]
ocs_plugin_api = { path = "../ocs_plugin_api", features = ["host"] }
acadrust = "0.4"
eframe = "0.31"
egui = "0.31"
crossbeam-channel = "0.5"
which = "7"
serde_json = "1"
